[gd_scene load_steps=8 format=3 uid="uid://bv4fgvjw2srgt"]

[ext_resource type="Script" path="res://character.gd" id="1"]
[ext_resource type="Script" path="res://map.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://db1mdlvbdcu7m" path="res://icon.png" id="3"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="BoxShape3D" id="3"]

[sub_resource type="BoxShape3D" id="2"]

[sub_resource type="CapsuleShape3D" id="4"]
height = 1.62816

[node name="Node" type="Node"]

[node name="Spatial" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Spatial"]
transform = Transform3D(1, 0, 0, 0, 0.816601, 0.577202, 0, -0.577202, 0.816601, 0, 3.84598, 0.205047)
fov = 67.5

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.5, 0, 0, 0, 0.405, 0, -0.118661, -4.148)
script = ExtResource("1")

[node name="CollisionShape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -5.96046e-08, 0)
shape = SubResource("1")

[node name="Sprite3D" type="Sprite3D" parent="player/CollisionShape"]
transform = Transform3D(3, 0, 0, 0, -1.31134e-07, -3, 0, 3, -1.31134e-07, 0, 0, 1.19954)
texture = ExtResource("3")

[node name="front" type="Area3D" parent="player"]

[node name="CollisionShape" type="CollisionShape3D" parent="player/front"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.3)
shape = SubResource("3")

[node name="back" type="Area3D" parent="player"]

[node name="CollisionShape" type="CollisionShape3D" parent="player/back"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)
shape = SubResource("3")

[node name="right" type="Area3D" parent="player"]

[node name="CollisionShape" type="CollisionShape3D" parent="player/right"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
shape = SubResource("3")

[node name="left" type="Area3D" parent="player"]

[node name="CollisionShape" type="CollisionShape3D" parent="player/left"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
shape = SubResource("3")

[node name="map" type="Node3D" parent="."]
script = ExtResource("2")

[node name="CSGTorus" type="CSGTorus3D" parent="map"]
transform = Transform3D(1.88847, 0, 0, 0, 0, 0, 0, 0, 1.88847, 0, 0, 0)
inner_radius = 1.0
outer_radius = 5.0
sides = 64
ring_sides = 64

[node name="CSGBox" type="CSGBox3D" parent="map"]
transform = Transform3D(0.449152, 0, -0.219687, 0, 1, 0, 0.219687, 0, 0.449152, 3.59272, 0.96973, -8.17592)

[node name="object" type="Area3D" parent="map"]

[node name="CollisionShape" type="CollisionShape3D" parent="map/object"]
transform = Transform3D(0.449, 0, -0.22, 0, 1, 0, 0.22, 0, 0.449, 3.593, 0.97, -8.176)
shape = SubResource("2")

[node name="enemy" type="Node3D" parent="map"]

[node name="enemy" type="Area3D" parent="map/enemy"]

[node name="CollisionShape" type="CollisionShape3D" parent="map/enemy/enemy"]
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 4, 1, 0)
shape = SubResource("4")

[node name="Sprite3D" type="Sprite3D" parent="map/enemy/enemy"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4, 0.326383, 0)
modulate = Color(1, 0, 0, 1)
texture = ExtResource("3")

[connection signal="area_entered" from="player/front" to="player" method="_on_front_area_entered"]
[connection signal="area_exited" from="player/front" to="player" method="_on_front_area_exited"]
[connection signal="area_entered" from="player/back" to="player" method="_on_back_area_entered"]
[connection signal="area_exited" from="player/back" to="player" method="_on_back_area_exited"]
[connection signal="area_entered" from="player/right" to="map" method="_on_right_area_entered"]
[connection signal="area_exited" from="player/right" to="map" method="_on_right_area_exited"]
[connection signal="area_entered" from="player/left" to="map" method="_on_left_area_entered"]
[connection signal="area_exited" from="player/left" to="map" method="_on_left_area_exited"]
[connection signal="body_entered" from="map/object" to="map" method="_on_Area_body_entered"]
[connection signal="body_exited" from="map/object" to="map" method="_on_Area_body_exited"]
[connection signal="body_entered" from="map/enemy/enemy" to="map" method="_on_enemy_body_entered"]
